--- a/CL_AnaliseSucessoFalha.ipynb
+++ b/CL_AnaliseSucessoFalha.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Estes gráficos não foram utilizados no artigo."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
